--- a/cloud-consumer-order81/pom.xml
+++ b/cloud-consumer-order81/pom.xml
@@ -35,6 +35,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+        <!-- 通用包 -->
+        <dependency>
+            <groupId>com.baoge.springcloud</groupId>
+            <artifactId>cloud-api-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
