--- a/cloud-provider-payment8001/pom.xml
+++ b/cloud-provider-payment8001/pom.xml
@@ -62,10 +62,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.xzq.springcloud</groupId>-->
-            <!--<artifactId>cloud-api-commons</artifactId>-->
-            <!--<version>${project.version}</version>-->
-        <!--</dependency>-->
+
+        <!-- 通用包 -->
+        <dependency>
+            <groupId>com.baoge.springcloud</groupId>
+            <artifactId>cloud-api-commons</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
