--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>cloud-provider-payment8001</module>
         <module>cloud-consumer-order81</module>
+        <module>cloud-api-commons</module>
     </modules>
 
     <!--统一管理jar包和版本-->
