--- a/cloud-consumer-order81/src/main/resources/application.yml
+++ b/cloud-consumer-order81/src/main/resources/application.yml
@@ -1,2 +1,15 @@
 server:
   port: 80
+
+spring:
+  application:
+    name: cloud-order-service
+
+eureka:
+  client:
+    #表示向注册中心注册自己 默认为true
+    register-with-eureka: true
+    #是否从EurekaServer抓取已有的注册信息，默认为true,单节点无所谓,集群必须设置为true才能配合ribbon使用负载均衡
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:7001/eureka  #入驻地址
