--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -13,6 +13,15 @@ spring:
     username: root
     password: 12345678
 
+eureka:
+  client:
+    #表示向注册中心注册自己 默认为true
+    register-with-eureka: true
+    #是否从EurekaServer抓取已有的注册信息，默认为true,单节点无所谓,集群必须设置为true才能配合ribbon使用负载均衡
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:7001/eureka  #入驻地址
+
 mybatis:
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.baoge.springcloud.entity  #所有entity别名所在包
