--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>cloud-provider-payment8001</module>
         <module>cloud-consumer-order81</module>
         <module>cloud-api-commons</module>
+        <module>cloud-eureka-server7001</module>
     </modules>
 
     <!--统一管理jar包和版本-->
