--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>cloud-consumer-order81</module>
         <module>cloud-api-commons</module>
         <module>cloud-eureka-server7001</module>
+        <module>cloud-eureka-server7002</module>
     </modules>
 
     <!--统一管理jar包和版本-->
